<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Football Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="bigger">Build it bigger!</string>
    <string name="reader">TBD Reader</string>
    <string name="capstone">CAPSTONE: My App</string>
    <string name="toast_spotify">This button will launch my Spotify Streamer app!</string>
    <string name="toast_scores">This button will launch my Scores app!</string>
    <string name="toast_library">This button will launch my Library app!</string>
    <string name="toast_build">This button will launch my Build it Bigger app!</string>
    <string name="toast_reader">This button will launch my Reader app!</string>
    <string name="toast_capstone">This button will launch my Capstone app!</string>
</resources>
